--- a/Style/bcnfStyle.css
+++ b/Style/bcnfStyle.css
@@ -137,3 +137,18 @@ glyphicon-log-out{color:#9d9d9d;}
 .myModalBody{ background-color: #6495ED; }
 
 .myForm{background-color: #eee;}
+
+.modal-title{
+    font-style:italic; 
+    font-weight: bold
+}
+
+#lblPreviewFDtoEditLeft, #lblPreviewFDtoEditRight, #lblArrow2{
+    font-size:20px;
+    color:black;
+}
+
+#lblPreviewFDtoCreateLeft, #lblPreviewFDtoCreateRight, #lblArrow{
+    font-size:20px;
+    color:black;
+}
